# foxglove-python

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: ci.yml
examples/: download.py  downloading_data.py  events.py  fetching_messages.py  fetching_sessions.py  upload.py  uploading_data.py
foxglove/: client.py
foxglove/client/: __init__.py  api.py
foxglove/data_platform/: client.py  to_curl.py
foxglove_data_platform/: client.py
tests/: api_url.py  generate.py  string_message.fds  string_message.proto  string_message_pb2.py  test_attachments.py  test_client.py  test_coverage.py  test_data.py  test_device_custom_property_history.py  test_device_custom_property_time_interval.py  test_devices.py  test_events.py  test_imports.py  test_json_messages.py  test_projects.py  test_protobuf_messages.py  test_recordings.py  test_ros1_messages.py  test_ros2_messages.py  test_sessions.py  test_stream_messages.py
