[metadata]
name = foxglove-data-platform
version = 0.0.13
description = Client library for Foxglove Data Platform.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/py-data-platform
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
install_requires =
    arrow
    requests
packages = find:
python_requires = >=3.8

[options.package_data]
foxglove_data_platform = py.typed
