[metadata]
name = foxglove-data-platform
version = 0.12.0
description = Client library for Foxglove Data Platform.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/py-data-platform
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
install_requires =
    arrow
    requests
    typing_extensions
    mcap >= 1.1.0
packages = find:
python_requires = >=3.7

[options.package_data]
foxglove_data_platform = py.typed
