[metadata]
name = foxglove
version = 1.0.0
description = Client library for the Foxglove API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/foxglove-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
install_requires =
    arrow
    requests
    typing_extensions
    mcap >= 1.1.0
packages = find:
python_requires = >=3.7

[options.package_data]
foxglove = py.typed
